# omnigent-pydantic-ai

./: .gitignore  README.md  pyproject.toml
examples/: agent.py  config.yaml
omnigent_pydantic_ai/: __init__.py  executor.py  harness.py  models.py  temporal.py
scripts/: env.sh  patch_omnigent.py
tests/: fake_agent.py  test_harness_hitl.py
